// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PathoscopeIsolate /> should render 1`] = `
<PathoscopeIsolate
  depth={13}
  maxDepth={22}
  name="Isolate A"
  onScroll={[MockFunction]}
  reads={102}
  sequences={
    Array [
      Object {
        "definition": "Foo Hit",
        "filled": Array [
          1,
          2,
          3,
          4,
          5,
        ],
        "id": "foo",
        "length": 5,
      },
      Object {
        "definition": "Bar Hit",
        "filled": Array [
          1,
          2,
          3,
          4,
          5,
          4,
          2,
          3,
        ],
        "id": "bar",
        "length": 8,
      },
    ]
  }
  showReads={false}
>
  <div>
    <Isolate__PathoscopeIsolateHeader>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Isolate__PathoscopeIsolateHeader-sc-2hw4nu-2",
              "isStatic": true,
              "lastClassName": "cvgTKV",
              "rules": Array [
                "align-items:center;display:flex;padding-bottom:2px;padding-top:15px;margin-bottom:4px;& > strong{padding-left:5px;}",
              ],
            },
            "displayName": "Isolate__PathoscopeIsolateHeader",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Isolate__PathoscopeIsolateHeader-sc-2hw4nu-2",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <div
          className="Isolate__PathoscopeIsolateHeader-sc-2hw4nu-2 cvgTKV"
        >
          Isolate A
          <PathoscopeIsolateWeight
            reads={102}
            showReads={false}
          >
            <strong
              className="small text-success"
            >
              NaN
            </strong>
          </PathoscopeIsolateWeight>
          <strong
            className="small text-danger"
          >
            13
          </strong>
          <strong
            className="small text-primary"
          >
            NaN
          </strong>
        </div>
      </StyledComponent>
    </Isolate__PathoscopeIsolateHeader>
    <Isolate__PathoscopeChartContainer>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Isolate__PathoscopeChartContainer-sc-2hw4nu-0",
              "isStatic": true,
              "lastClassName": "HhofF",
              "rules": Array [
                "border-radius:2px;box-shadow:inset 0 2px 4px 0 rgba(0,0,0,0.1);margin-top:5px;overflow-x:scroll;",
              ],
            },
            "displayName": "Isolate__PathoscopeChartContainer",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Isolate__PathoscopeChartContainer-sc-2hw4nu-0",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={
          Object {
            "current": <div
              class="Isolate__PathoscopeChartContainer-sc-2hw4nu-0 HhofF"
            >
              <div
                class="Isolate__PathoscopeChartRibbon-sc-2hw4nu-1 iwWEsl"
              >
                <div
                  class="Coverage__StyledCoverageChart-umswn9-0 dRxTaL"
                >
                  <svg
                    height="200"
                    width="5"
                  >
                    <g
                      transform="translate(45,10)"
                    >
                      <g
                        class="x axis"
                        fill="none"
                        font-family="sans-serif"
                        font-size="10"
                        text-anchor="middle"
                        transform="translate(0,140)"
                      >
                        <path
                          class="domain"
                          d="M0.5,6V0.5H-49.5V6"
                          stroke="currentColor"
                        />
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            0.0
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-4.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            0.5
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-9.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            1.0
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-14.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            1.5
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-19.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            2.0
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-24.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            2.5
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-29.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            3.0
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-34.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            3.5
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-39.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            4.0
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-44.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            4.5
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-49.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            5.0
                          </text>
                        </g>
                      </g>
                      <g
                        class="y axis"
                        fill="none"
                        font-family="sans-serif"
                        font-size="10"
                        text-anchor="end"
                      >
                        <path
                          class="domain"
                          d="M-6,140.5H0.5V0.5H-6"
                          stroke="currentColor"
                        />
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,140.5)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            0
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,127.77272727272727)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            2
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,115.04545454545455)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            4
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,102.31818181818181)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            6
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,89.5909090909091)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            8
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,76.86363636363637)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            10
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,64.13636363636364)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            12
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,51.40909090909091)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            14
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,38.68181818181817)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            16
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,25.954545454545453)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            18
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,13.227272727272734)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            20
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0,0.5)"
                        >
                          <line
                            stroke="currentColor"
                            x2="-6"
                          />
                          <text
                            dy="0.32em"
                            fill="currentColor"
                            x="-9"
                          >
                            22
                          </text>
                        </g>
                      </g>
                      <text
                        class="coverage-label small"
                        transform="translate(4,10)"
                      >
                        foo - Foo Hit
                      </text>
                    </g>
                  </svg>
                </div>
                <div
                  class="Coverage__StyledCoverageChart-umswn9-0 dRxTaL"
                >
                  <svg
                    height="200"
                    width="8"
                  >
                    <g
                      transform="translate(15,10)"
                    >
                      <g
                        class="x axis"
                        fill="none"
                        font-family="sans-serif"
                        font-size="10"
                        text-anchor="middle"
                        transform="translate(0,140)"
                      >
                        <path
                          class="domain"
                          d="M0.5,6V0.5H-16.5V6"
                          stroke="currentColor"
                        />
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(0.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            0
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-1.625,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            1
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-3.75,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            2
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-5.875,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            3
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-8,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            4
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-10.125,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            5
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-12.25,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            6
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-14.375,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            7
                          </text>
                        </g>
                        <g
                          class="tick"
                          opacity="1"
                          transform="translate(-16.5,0)"
                        >
                          <line
                            stroke="currentColor"
                            y2="6"
                          />
                          <text
                            dx="-0.8em"
                            dy="0.15em"
                            fill="currentColor"
                            style="text-anchor: end;"
                            transform="rotate(-65)"
                            y="9"
                          >
                            8
                          </text>
                        </g>
                      </g>
                      <text
                        class="coverage-label small"
                        transform="translate(4,10)"
                      >
                        bar - Bar Hit
                      </text>
                    </g>
                  </svg>
                </div>
              </div>
            </div>,
          }
        }
      >
        <div
          className="Isolate__PathoscopeChartContainer-sc-2hw4nu-0 HhofF"
        >
          <Isolate__PathoscopeChartRibbon>
            <StyledComponent
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "Isolate__PathoscopeChartRibbon-sc-2hw4nu-1",
                    "isStatic": true,
                    "lastClassName": "iwWEsl",
                    "rules": Array [
                      "white-space:nowrap;",
                    ],
                  },
                  "displayName": "Isolate__PathoscopeChartRibbon",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "Isolate__PathoscopeChartRibbon-sc-2hw4nu-1",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="Isolate__PathoscopeChartRibbon-sc-2hw4nu-1 iwWEsl"
              >
                <CoverageChart
                  definition="Foo Hit"
                  id="foo"
                  key="0"
                  length={5}
                  showYAxis={true}
                  yMax={22}
                >
                  <Coverage__StyledCoverageChart>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Coverage__StyledCoverageChart-umswn9-0",
                            "isStatic": true,
                            "lastClassName": "dRxTaL",
                            "rules": Array [
                              "display:inline-block;margin-top:5px;",
                            ],
                          },
                          "displayName": "Coverage__StyledCoverageChart",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Coverage__StyledCoverageChart-umswn9-0",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={
                        Object {
                          "current": <div
                            class="Coverage__StyledCoverageChart-umswn9-0 dRxTaL"
                          >
                            <svg
                              height="200"
                              width="5"
                            >
                              <g
                                transform="translate(45,10)"
                              >
                                <g
                                  class="x axis"
                                  fill="none"
                                  font-family="sans-serif"
                                  font-size="10"
                                  text-anchor="middle"
                                  transform="translate(0,140)"
                                >
                                  <path
                                    class="domain"
                                    d="M0.5,6V0.5H-49.5V6"
                                    stroke="currentColor"
                                  />
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      0.0
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-4.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      0.5
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-9.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      1.0
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-14.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      1.5
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-19.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      2.0
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-24.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      2.5
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-29.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      3.0
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-34.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      3.5
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-39.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      4.0
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-44.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      4.5
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-49.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      5.0
                                    </text>
                                  </g>
                                </g>
                                <g
                                  class="y axis"
                                  fill="none"
                                  font-family="sans-serif"
                                  font-size="10"
                                  text-anchor="end"
                                >
                                  <path
                                    class="domain"
                                    d="M-6,140.5H0.5V0.5H-6"
                                    stroke="currentColor"
                                  />
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,140.5)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      0
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,127.77272727272727)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      2
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,115.04545454545455)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      4
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,102.31818181818181)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      6
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,89.5909090909091)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      8
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,76.86363636363637)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      10
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,64.13636363636364)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      12
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,51.40909090909091)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      14
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,38.68181818181817)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      16
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,25.954545454545453)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      18
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,13.227272727272734)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      20
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0,0.5)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      x2="-6"
                                    />
                                    <text
                                      dy="0.32em"
                                      fill="currentColor"
                                      x="-9"
                                    >
                                      22
                                    </text>
                                  </g>
                                </g>
                                <text
                                  class="coverage-label small"
                                  transform="translate(4,10)"
                                >
                                  foo - Foo Hit
                                </text>
                              </g>
                            </svg>
                          </div>,
                        }
                      }
                    >
                      <div
                        className="Coverage__StyledCoverageChart-umswn9-0 dRxTaL"
                      />
                    </StyledComponent>
                  </Coverage__StyledCoverageChart>
                </CoverageChart>
                <CoverageChart
                  definition="Bar Hit"
                  id="bar"
                  key="1"
                  length={8}
                  showYAxis={false}
                  yMax={22}
                >
                  <Coverage__StyledCoverageChart>
                    <StyledComponent
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Coverage__StyledCoverageChart-umswn9-0",
                            "isStatic": true,
                            "lastClassName": "dRxTaL",
                            "rules": Array [
                              "display:inline-block;margin-top:5px;",
                            ],
                          },
                          "displayName": "Coverage__StyledCoverageChart",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Coverage__StyledCoverageChart-umswn9-0",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={
                        Object {
                          "current": <div
                            class="Coverage__StyledCoverageChart-umswn9-0 dRxTaL"
                          >
                            <svg
                              height="200"
                              width="8"
                            >
                              <g
                                transform="translate(15,10)"
                              >
                                <g
                                  class="x axis"
                                  fill="none"
                                  font-family="sans-serif"
                                  font-size="10"
                                  text-anchor="middle"
                                  transform="translate(0,140)"
                                >
                                  <path
                                    class="domain"
                                    d="M0.5,6V0.5H-16.5V6"
                                    stroke="currentColor"
                                  />
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(0.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      0
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-1.625,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      1
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-3.75,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      2
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-5.875,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      3
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-8,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      4
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-10.125,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      5
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-12.25,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      6
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-14.375,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      7
                                    </text>
                                  </g>
                                  <g
                                    class="tick"
                                    opacity="1"
                                    transform="translate(-16.5,0)"
                                  >
                                    <line
                                      stroke="currentColor"
                                      y2="6"
                                    />
                                    <text
                                      dx="-0.8em"
                                      dy="0.15em"
                                      fill="currentColor"
                                      style="text-anchor: end;"
                                      transform="rotate(-65)"
                                      y="9"
                                    >
                                      8
                                    </text>
                                  </g>
                                </g>
                                <text
                                  class="coverage-label small"
                                  transform="translate(4,10)"
                                >
                                  bar - Bar Hit
                                </text>
                              </g>
                            </svg>
                          </div>,
                        }
                      }
                    >
                      <div
                        className="Coverage__StyledCoverageChart-umswn9-0 dRxTaL"
                      />
                    </StyledComponent>
                  </Coverage__StyledCoverageChart>
                </CoverageChart>
              </div>
            </StyledComponent>
          </Isolate__PathoscopeChartRibbon>
        </div>
      </StyledComponent>
    </Isolate__PathoscopeChartContainer>
  </div>
</PathoscopeIsolate>
`;

exports[`<PathoscopeIsolateWeight /> should render reads 1`] = `
<strong
  className="small text-success"
>
  121
</strong>
`;

exports[`<PathoscopeIsolateWeight /> should render weight 1`] = `
<strong
  className="small text-success"
>
  0.321
</strong>
`;

exports[`<PathoscopeIsolateWeight /> should render weight in scientific notation 1`] = `
<strong
  className="small text-success"
>
  3.21E-7
</strong>
`;
